# libarccos

./: .gitignore  CMakeLists.txt  CTestConfig.cmake  README.md  libarccos.kdev4
doc/: CMakeLists.txt  Doxyfile.in  speedTODO.txt
include/: CMakeLists.txt
include/arccos/: CMakeLists.txt
include/arccos/game/: CMakeLists.txt  board.h
include/arccos/mptools/: interval.h  typelist.h
include/arccos/structs/: graph.h  node.h  nspair.h  path.h  recpath.h
include/arccos/test/: static.h  timereport.h
include/game/: board.h
include/logging/: CMakeLists.txt  hexa.h  metalogging.h
include/mptools/: CMakeLists.txt  type_traits.cpp
include/structs/: CMakeLists.txt  graph.h  graph_trait.h  node.h  nodeset.h  path.h
include/test/: CMakeLists.txt  static.h
src/: CMakeLists.txt
src/logging/: CMakeLists.txt  hexa.h  logging.h  metalogging.h
src/mptools/: CMakeLists.txt  interval.h  type_traits.h  typelist.h
src/structs/: CMakeLists.txt  graph.cpp  graph.h
tests/: CMakeLists.txt
tests/mptoolstests/: CMakeLists.txt
tests/mptoolstests/intervaltests/: intervaltest.cpp  intervaltest.h  main.cpp
tests/mptoolstests/loggingtests/: CMakeLists.txt  loggingtest.cpp  loggingtest.h  main.cpp
tests/mptoolstests/typelisttests/: main.cpp  typelisttest.cpp  typelisttest.h
tests/mptoolstests/typetraitstests/: main.cpp  typetraitstest.cpp  typetraitstest.h
tests/structstests/: CMakeLists.txt
tests/structstests/graphtests/: graphtest.cpp  graphtest.h  main.cpp
tpl/: CMakeLists.txt
tpl/arccos/: CMakeLists.txt
tpl/arccos/game/: board.tpp
tpl/arccos/structs/: graph.tpp  node.tpp  nodeset.tpp  path.tpp  recpath.tpp
tpl/arccos/tests/: timereport.tpp
tpl/game/: board.cpp
tpl/structs/: graph.cpp  node.cpp  nodeset.cpp  path.cpp  recpath.cpp
tpl/tests/: timereport.cpp
